// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authen-local-passport should be true for valid email 1`] = `true`;

exports[`authen-local-passport should be true for valid email and password 1`] = `true`;

exports[`authen-local-passport should be true for valid password 1`] = `true`;

exports[`authen-local-passport should create email verification url 1`] = `"http://localhost:3000/auth/local/FOO_TOKEN"`;

exports[`authen-local-passport should create new password reset url 1`] = `"http://localhost:3000/auth/reset"`;

exports[`authen-local-passport should create password reset url 1`] = `"http://localhost:3000/auth/reset/FOO_TOKEN"`;

exports[`authen-local-passport should redirect non exist token to /auth/error/token-not-exist 1`] = `"/auth/error/token-not-exist"`;

exports[`authen-local-passport should redirect null token to /auth/error/token-not-provided 1`] = `"/auth/error/token-not-provided"`;

exports[`authen-local-passport should redirect valid token to /auth/verified 1`] = `"/auth/verified"`;

exports[`authen-local-passport should reset password if user exist 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "email": "foo@bar.com",
  "role": "user",
  "token": "aa90f9ca-ced9-4cad-b4a2-948006bf000d",
}
`;

exports[`authen-local-passport should signup new user and return user data 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "foo": "bar",
  "role": "user",
}
`;

exports[`authen-local-passport should validate local strategy 1`] = `
Object {
  "_id": "592c0bb4484d740e0e73798b",
  "hashed_password": "$2a$10$J8sNyptEzgDuQu3b9H8PnuYO85KLnMYF2RjmMeAbt.vpND7NymH/O",
  "role": "user",
  "verified": true,
}
`;
